architecture/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  labels:
    app: discount-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: discount-service
  template:
    metadata:
      labels:
        app: discount-service
    spec:
      containers:
      - name: discount-service
        image: ghcr.io/arturgoms/discount-service:1.0.0
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            name: gunicorn
      imagePullSecrets:
        - name: dockerconfigjson-github-com
---

apiVersion: v1
kind: Service
metadata:
  name: django-cluster-ip-service
spec:
  type: NodePort
  selector:
    app: discount-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31000
