architecture/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: django.arturgomes.com.br
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: django-cluster-ip-service
              port:
                number: 80

        - path: /flower
          pathType: Prefix
          backend:
            service:
              name: flower-cluster-ip-service
              port:
                number: 80
